openmpi (1.2.4-4) unstable; urgency=low

  [ Manuel Prinz ]
  * debian/control:
    - Renamed XS-Vcs-* fields to Vcs-*
    - Added Homepage field
    - Removed Build-Depends on libsysfs-dev (Closes: #449084)

 -- Manuel Prinz <debian@pinguinkiste.de>  Mon, 05 Nov 2007 21:35:03 +0100

openmpi (1.2.4-3) unstable; urgency=low

  [ Manuel Prinz ]
  * debian/control: Added openmpi-common to libopenmpi-dev's Depends
    (Closes: #445230)

  [ Dirk Eddelbuettel ]
  * Debian build and upload

 -- Dirk Eddelbuettel <edd@debian.org>  Sat, 06 Oct 2007 07:54:47 -0500

openmpi (1.2.4-2) unstable; urgency=low

  [ Manuel Prinz ]
  * debian/control: Added sparc to list of supported architectures

  [ Dirk Eddelbuettel ]
  * Debian build and upload

 -- Dirk Eddelbuettel <edd@debian.org>  Tue, 02 Oct 2007 22:04:04 -0500

openmpi (1.2.4-1) unstable; urgency=low

  [ Manuel Prinz ]
  * debian/control: Modified package relationships to prevent problems when
    upgrading from 1.2.3-4 (Closes: #444432)

  [ Dirk Eddelbuettel ]
  * Debian build and upload

 -- Dirk Eddelbuettel <edd@debian.org>  Fri, 28 Sep 2007 16:25:13 -0500

openmpi (1.2.4-0) unstable; urgency=low

  * New upstream release

  [ Sylvestre Ledru ]
  * debian/patches: Removed 50fix_kfreebsd_build patch (Fixed upstream)

  [ Manuel Prinz ]
  * Patch added: Please shut up libibverbs (Closes: #439730)
  * Moved compiler wrappers from package openmpi-bin to libopenmpi-dev.

  [ Dirk Eddelbuettel ]
  * Debian build and upload
  
 -- Dirk Eddelbuettel <edd@debian.org>  Wed, 26 Sep 2007 22:07:15 -0500

openmpi (1.2.3-4) unstable; urgency=low

  [ Manuel Prinz ]
  * Fixed: openmpi-bin: FTBFS on kFreeBSD and maybe Hurd. Thanks to
    Uwe Hermann for providing the patches! (Closes: #437839)
  * debian/rules: Disabled threading support (Closes: #435581)
  * debian/openmpi-bin.README.Debian: Documented disabling of threading
  * debian/patches: Removed 10opal_noexecstack and 99autoconf patches