@@ -8,6 +8,12 @@ DEB_HOST_GNU_CPU  ?= $(shell dpkg-architecture -qDEB_HOST_GNU_CPU)
 
 CFLAGS = -Wall -g
 
+ifneq ($(DEB_HOST_GNU_TYPE),$(DEB_BUILD_GNU_TYPE))
+	CROSS= --build $(DEB_BUILD_GNU_TYPE) --host $(DEB_HOST_GNU_TYPE)
+else
+	CROSS= --build $(DEB_BUILD_GNU_TYPE)
+endif
+
 ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
 	CFLAGS += -O0
 else
@@ -22,7 +28,7 @@ configure: patch configure-stamp
 configure-stamp: 
 	dh_testdir
 	CFLAGS="$(CFLAGS)" ./configure 				\
-			--build=$(DEB_BUILD_GNU_TYPE) 		\
+			$(CROSS)				\
 			--prefix=/usr 				\
 			--mandir=\$${prefix}/share/man 		\
 			--infodir=\$${prefix}/share/info 	\
